--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,7 @@
 ---
 collections:
   - name: community.docker
+roles:
+  - name: docker
+    src: https://github.com/geerlingguy/ansible-role-docker.git
+    scm: git
