--- a/update-docker-compose.yml
+++ b/update-docker-compose.yml
@@ -5,6 +5,10 @@
   vars:
     compose_file: "{{ 'docker-compose.yml' if lookup('env', 'COMPOSE_FILE') | length < 1 else lookup('env', 'COMPOSE_FILE') }}"
 
+
+  roles:
+    - docker
+
   tasks:
     - name: print
       debug:
