--- a/update-docker-compose.yml
+++ b/update-docker-compose.yml
@@ -3,6 +3,7 @@
   hosts: "{{ lookup('env', 'SSH_HOSTS') }}"
   become: true
   vars:
+    docker_install_compose: true
     compose_file: "{{ 'docker-compose.yml' if lookup('env', 'COMPOSE_FILE') | length < 1 else lookup('env', 'COMPOSE_FILE') }}"
 
 
