update-webapp.yml and update-multi-webapp.yml: use shell instead command for COMMAND_ENDING

--- a/update-multi-webapp.yml
+++ b/update-multi-webapp.yml
@@ -36,7 +36,7 @@
 
 
     - name: Execute commands
-      command: "{{ lookup('env', 'COMMAND_ENDING') }}"
+      shell: "{{ lookup('env', 'COMMAND_ENDING') }}"
       args:
         chdir: "{{ item.path }}"
       when: lookup('env', 'COMMAND_ENDING')|length > 0
